Bug 252572 - REGRESSION(260457@main): WKView is still needed
Summary: REGRESSION(260457@main): WKView is still needed
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords: InRadar
Depends on:
Blocks: 252419
  Show dependency treegraph
 
Reported: 2023-02-20 08:55 PST by WebKit Commit Bot
Modified: 2023-02-20 09:33 PST (History)
2 users (show)

See Also:


Attachments
REVERT of 260457@main (158.08 KB, patch)
2023-02-20 08:55 PST, WebKit Commit Bot
achristensen: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description WebKit Commit Bot 2023-02-20 08:55:04 PST
https://commits.webkit.org/260457@main introduced a regression:
WKView is still needed

This is an automatic bug report generated by webkitbot. If this bug
report was created because of a flaky test, please file a bug for the flaky
test (if we don't already have one on file) and dup this bug against that bug
so that we can track how often these flaky tests fail.
Comment 1 WebKit Commit Bot 2023-02-20 08:55:10 PST
Created attachment 465086 [details]
REVERT of 260457@main

Any committer can land this patch automatically by marking it commit-queue+.  The commit-queue will build and test the patch before landing to ensure that the revert will be successful.  This process takes approximately 15 minutes.

If you would like to land the revert faster, you can use the following command:

  webkit-patch land-attachment ATTACHMENT_ID

where ATTACHMENT_ID is the ID of this attachment.
Comment 2 Alexey Proskuryakov 2023-02-20 09:07:03 PST
Alex will revert manually.
Comment 3 Alex Christensen 2023-02-20 09:11:12 PST
Pull request: https://github.com/WebKit/WebKit/pull/10369
Comment 4 EWS 2023-02-20 09:32:48 PST
Committed 260541@main (ae2abefb80e6): <https://commits.webkit.org/260541@main>

Reviewed commits have been landed. Closing PR #10369 and removing active labels.
Comment 5 Radar WebKit Bug Importer 2023-02-20 09:33:32 PST
<rdar://problem/105682796>